--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "helmet": "^3.21.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.5",
-    "knex-cleaner": "^1.3.0"
+    "knex-cleaner": "^1.3.0",
+    "sqlite3": "^4.1.0"
   },
   "devDependencies": {
     "cross-env": "^6.0.3",
