--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "knex": "^0.19.5",
     "knex-cleaner": "^1.3.0",
     "pg": "^7.12.1",
+    "pg-hstore": "^2.3.3",
     "sequelize": "^5.19.8",
+    "sequelize-cli": "^5.5.1",
     "sqlite3": "^4.1.0"
   },
   "devDependencies": {
