"added missing comma" Co-authored-by: LaVon Mejia <lavonmejia@gmail.com> Co-authored-by: reesekunz <reesekunz21@gmail.com> Co-authored-by: jazz-code <ren.meta@gmail.com> Co-authored-by: Julie Thrall Stewart <juliethrallstewart@gmail.com>

--- a/package.json
+++ b/package.json
@@ -9,9 +9,8 @@
     "test": "cross-env DB_ENV=testing jest --watch"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
     "start": "nodemon index.js"
-
   },
   "repository": {
     "type": "git",
