--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "knex-cleaner": "^1.3.0",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
+    "postgraphile": "^4.4.4",
     "sequel": "^0.3.10",
     "sequelize": "^5.19.8",
     "sequelize-cli": "^5.5.1",
