--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-router": "0.0.1",
+    "express-validator": "^6.2.0",
     "helmet": "^3.21.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.5",
     "knex-cleaner": "^1.3.0",
-    "node": "^12.12.0",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
     "sequel": "^0.3.10",
