"added setClock function in jsonCache that updates pumps.json at specified times"
Co-authored-by: jazz-code <ren.meta@gmail.com>

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
+    "dev-test": "node services/jsonCache.js && nodemon index.js",
     "fetch": "node services/jsonCache.js",
     "start": "node index.js",
     "test": "cross-env DB_ENV=test jest --watch"
