--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.5",
     "knex-cleaner": "^1.3.0",
-    "node": "^12.12.0",
     "moment": "^2.24.0",
+    "node": "^12.12.0",
+    "node-schedule": "^1.3.2",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
     "postgraphile": "^4.4.4",
