--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "sequel": "^0.3.10",
     "sequelize": "^5.19.8",
     "sequelize-cli": "^5.5.1",
+    "sloth-cli": "^1.0.2",
     "sqlite3": "^4.1.0"
   },
   "devDependencies": {
