testing build script without sloth

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev-test": "node services/jsonCache.js && nodemon index.js",
     "fetch": "node services/jsonCache.js",
     "test": "cross-env DB_ENV=test jest --watch",
-    "build": "sloth .1 \"node services/jsonCache.js && node index.js\" true true"
+    "build": "node services/jsonCache.js && node index.js"
   },
   "jest": {
     "testEnvironment": "node",
