--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev-test": "node services/jsonCache.js && nodemon index.js",
     "fetch": "node services/jsonCache.js",
     "test": "cross-env DB_ENV=test jest --watch",
-    "build": "node services/jsonCache.js && node index.js"
+    "start": "node index.js"
+
   },
   "jest": {
     "testEnvironment": "node",
@@ -56,5 +57,9 @@
     "jest": "^24.9.0",
     "nodemon": "^1.19.3",
     "supertest": "^4.0.2"
+   
+  },
+  "engines": {
+    "node": "12.x"
   }
 }
