--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "fetch": "node services/jsonCache.js",
     "test": "cross-env DB_ENV=test jest --watch",
     "start": "node index.js"
-
   },
   "jest": {
     "testEnvironment": "node",
@@ -46,6 +45,7 @@
     "postgraphile": "^4.4.4",
     "prismic-javascript": "^2.1.1",
     "prismic-reactjs": "^1.1.1",
+    "request": "^2.88.0",
     "sequel": "^0.3.10",
     "sequelize": "^5.19.8",
     "sequelize-cli": "^5.5.1",
@@ -57,7 +57,6 @@
     "jest": "^24.9.0",
     "nodemon": "^1.19.3",
     "supertest": "^4.0.2"
-   
   },
   "engines": {
     "node": "12.x"
