--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express-router": "0.0.1",
     "express-validator": "^6.2.0",
     "helmet": "^3.21.1",
+    "jest-cli": "^24.9.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.5",
     "knex-cleaner": "^1.3.0",
