--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "dev-test": "node services/jsonCache.js && nodemon index.js",
     "fetch": "node services/jsonCache.js",
     "test": "cross-env DB_ENV=test jest --watch",
+    "setup": "cross-env DB_ENV=test jest setup.test.js --watch",
+    "integration": "cross-env DB_ENV=test jest '(/*.*\\.spec)\\.js$' --runInBand --watch",
     "start": "node index.js"
   },
   "jest": {
