--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"knex": "^0.19.5",
 		"knex-cleaner": "^1.3.0",
 		"moment": "^2.24.0",
+		"morgan": "^1.9.1",
 		"multer": "^1.4.2",
 		"multer-storage-cloudinary": "^2.2.1",
 		"node": "^12.12.0",
